--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>buzzapp</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/image/logo.svg">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
@@ -26,12 +27,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 position-relative text-center text-md-start">
+                <div class="col-md-6 position-relative text-center text-md-start" data-aos="fade-up">
                     <h1 class="primaryTitle mt-0 mt-md-5">Find Events Fast & Easy</h1>
                     <p class="bannerDes">Discover the endless variety of events on our app</p>
                     <img class="bannerIcon" src="assets/image/bannerIcon.svg" alt="banner-icon">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" data-aos="fade-up">
                     <div class="bannerImg position-relative text-end">
                         <div class="scannerImg">
                             <span class="d-block">Scan QR Code</span>
@@ -51,10 +52,10 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-5 pt-5 pb-5 pb-md-0 text-center text-md-start position-relative index2">
+                <div class="col-md-5 pt-5 pb-5 pb-md-0 text-center text-md-start position-relative index2"  data-aos="fade-up">
                     <h1 class="primaryTitle">Search Events By Category</h1>
                 </div>
-                <div class="col-md-7 smallSlider position-relative">
+                <div class="col-md-7 smallSlider position-relative" data-aos="fade-up">
                     <div class="sliderOuter">
                         <div class="textSlider1">
                             <h4>Food & Beverage Events</h4>
@@ -74,7 +75,7 @@
     <div class="eventSection sectionPadding">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 position-relative d-none d-lg-block">
+                <div class="col-lg-6 position-relative d-none d-lg-block" data-aos="fade-up">
                     <div class="eventImg">
                         <img src="assets/image/eventImg.png" alt="event-img">
                     </div>
@@ -84,7 +85,7 @@
                         <img src="assets/image/musicIcon.svg" alt="music-icon" width="100%">
                     </div>
                     <div class="row align-items-end">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6" data-aos="fade-up">
                             <div class="eventBox">
                                 <h4 class="primaryTitle titleMD">LIVE MUSIC</h4>
                                 <ul>
@@ -99,7 +100,7 @@
                                 <img src="assets/image/eventIcon.png" alt="icon">
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6" data-aos="fade-up">
                             <div class="eventBox">
                                 <h4 class="primaryTitle titleMD">SPORT EVENTS</h4>
                                 <ul style="max-width: 380px;">
@@ -120,7 +121,7 @@
     <section class="textSliderSection py-3 position-relative" style="background-color: #2EA1A8;">
         <div class="img01 position-absolute"><img src="assets/image/icon03.png" alt="icon03"></div>
         <div class="img02 position-absolute bottom-0 end-0"><img src="assets/image/icon04.png" alt="icon03"></div>
-        <div class="sliderOuter">
+        <div class="sliderOuter" data-aos="fade-up">
             <div class="textSlider1">
                 <h4>Today</h4>
                 <h4>Within 3 Days</h4>
@@ -136,11 +137,11 @@
     <section class="referSection">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-7">
+                <div class="col-md-7" data-aos="fade-up">
                     <h1 class="primaryTitle titleMD text-center text-md-start mt-5 mt-md-0 mb-5 mb-md-0">MANY WAYS TO EARN <br> COINS & RECEIVE PERSONALIZED <br>
                         EVENT SUGGESTIONS <br> WAYS TO EARN COINS</h1>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5" data-aos="fade-up">
                     <div class="referImg position-relative">
                         <p><span class="d-block">Invite Friends</span> (You both get conins)</p>
                         <img src="assets/image/referImg.png" alt="refer-img" width="100%">
@@ -153,13 +154,13 @@
     <section class="sectionPadding privacySection position-relative">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6">
+                <div class="col-md-6" data-aos="fade-up">
                     <div class="privacyImg text-end position-relative">
                         <img class="startImg" src="assets/image/start.png" alt="start-img">
                         <img class="lockMainImg" src="assets/image/lock1.png" alt="lock-img">
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" data-aos="fade-up">
                     <h1 class="primaryTitle text-center mt-5 mt-md-0 text-md-end titleMD">PROTECTING <br> YOUR PRIVACY - WE NEVER
                         SHARE YOUR DATA</h1>
                 </div>
@@ -170,12 +171,12 @@
     <div class="sectionPadding greenBg">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-5 mb-md-0">
+                <div class="col-md-6 text-center text-md-start mb-5 mb-md-0" data-aos="fade-up">
                     <h1 class="primaryTitle titleMD">MUSICIAN? DJ? VENUE MANAGER / OWNER? <br> FESTIVAL
                         ORGANIZER?</h1>
                     <p class="bannerDes">Add events for free and unlimited on</p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" data-aos="fade-up">
                     <div class="position-relative">
                         <img class="icon03" src="assets/image/icon03.svg" alt="icon">
                         <img class="position-relative" src="assets/image/Midnight.png" lang="img" width="100%">
@@ -187,7 +188,7 @@
     </div>
 
     <section class="sectionPadding downloadSection">
-        <div class="container">
+        <div class="container" data-aos="fade-up">
             <h2>DOWNLOAD The BUUZ app to explore events near you</h2>
             <div class="downloadIcon d-flex justify-content-center gap-3 mt-3 position-relative">
                 <div class="icon02">
@@ -202,10 +203,10 @@
     <section class="buzz_footer">
         <div class="container">
             <div class="row g-3">
-                <div class="col-md-4 col-lg-2">
+                <div class="col-md-4 col-lg-2" data-aos="fade-down">
                     <img src="assets/image/logo.svg" alt="logo">
                 </div>
-                <div class="col-md-4 col-lg-2">
+                <div class="col-md-4 col-lg-2" data-aos="fade-down">
                     <div class="footerLink">
                         <a href="#">How It Works</a>
                         <a href="#">BUUZ In The Press</a>
@@ -213,21 +214,21 @@
                         <a href="#">Privacy Policy</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-lg-3">
+                <div class="col-md-4 col-lg-3" data-aos="fade-down">
                     <div class="footerLink">
                         <a href="#">Musicians, DJs and Artists</a>
                         <a href="#">Venues, Arenas, Stadiums</a>
                         <a href="#">Comedy Clubs</a>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3">
+                <div class="col-md-6 col-lg-3" data-aos="fade-down">
                     <div class="footerLink">
                         <a href="#">Theaters & Performing Art Centers</a>
                         <a href="#">Festivals and Beach Events</a>
                         <a href="#">Cities, Municipalities, Parks</a>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-2 text-right">
+                <div class="col-md-6 col-lg-2 text-right" data-aos="fade-down">
                     <div class="footerSocial">
                         <a href="#"><img src="assets/image/Facebook.svg" alt="YouTube"></a>
                         <a href="#"><img src="assets/image/YouTube.svg" alt="YouTube"></a>
@@ -245,6 +246,17 @@
 
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/aos.js"></script>
+    <script>
+         window.addEventListener('load', () => {
+            AOS.init({
+            duration: 1000,
+            easing: 'ease-in-out',
+            once: true,
+            mirror: false
+            })
+        });
+    </script>
 </body>
 
 </html>
