--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <section class="sectionPadding downloadSection">
         <div class="container" data-aos="fade-up">
             <h2>DOWNLOAD The BUUZ app to explore events near you</h2>
-            <div class="downloadIcon d-flex justify-content-center gap-3 mt-3 position-relative">
+            <div class="downloadIcon d-flex justify-content-center gap-3 mt-3 position-relative flex-wrap">
                 <div class="icon02">
                     <img src="assets/image/icon02.svg" alt="icon02">
                 </div>
