--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-lg-6 position-relative">
                     <div class="musicIcon">
-                        <img src="assets/image/musicIcon.svg" alt="music-icon" width="100%">
+                        <img src="assets/image/musicIcon.svg" alt="music-icon" width="100%" data-aos="fade-up">
                     </div>
                     <div class="row align-items-end">
                         <div class="col-sm-6" data-aos="fade-up">
@@ -119,8 +119,8 @@
     </div>
 
     <section class="textSliderSection py-3 position-relative" style="background-color: #2EA1A8;">
-        <div class="img01 position-absolute"><img src="assets/image/icon03.png" alt="icon03"></div>
-        <div class="img02 position-absolute bottom-0 end-0"><img src="assets/image/icon04.png" alt="icon03"></div>
+        <div data-aos="fade-up" class="img01 position-absolute"><img src="assets/image/icon03.png" alt="icon03"></div>
+        <div data-aos="fade-up" class="img02 position-absolute bottom-0 end-0"><img src="assets/image/icon04.png" alt="icon03"></div>
         <div class="sliderOuter" data-aos="fade-up">
             <div class="textSlider1">
                 <h4>Today</h4>
@@ -175,6 +175,7 @@
                     <h1 class="primaryTitle titleMD">MUSICIAN? DJ? VENUE MANAGER / OWNER? <br> FESTIVAL
                         ORGANIZER?</h1>
                     <p class="bannerDes">Add events for free and unlimited on</p>
+                    <a class="linkBtn" href="#">www.BUUZEVENTS.com</a>
                 </div>
                 <div class="col-md-6" data-aos="fade-up">
                     <div class="position-relative">
