--- a/index.html
+++ b/index.html
@@ -137,13 +137,16 @@
     <section class="referSection">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-7" data-aos="fade-up">
+                <div class="col-md-7" data-aos="fade-up" data-aos-delay="1000">
                     <h1 class="primaryTitle titleMD text-center text-md-start mt-5 mt-md-0 mb-5 mb-md-0">MANY WAYS TO EARN <br> COINS & RECEIVE PERSONALIZED <br>
-                        EVENT SUGGESTIONS <br> WAYS TO EARN COINS</h1>
+                        EVENT SUGGESTIONS</h1>
                 </div>
                 <div class="col-md-5" data-aos="fade-up">
                     <div class="referImg position-relative">
-                        <p><span class="d-block">Invite Friends</span> (You both get conins)</p>
+                        <p data-aos="zoom-in" data-aos-delay="800"><span class="d-block">Invite Friends</span> (You and your Friends will receive coins)</p>
+                        <span class="imgLabel" data-aos="zoom-in" data-aos-delay="1000">Swipe Question</span>
+                        <span class="imgLabel imgLabel02" data-aos="zoom-in" data-aos-delay="1200">Suggest or Report Venues</span>
+                        <span class="imgLabel imgLabel03" data-aos="zoom-in" data-aos-delay="1000">Play Trivia Etc.</span>
                         <img src="assets/image/referImg.png" alt="refer-img" width="100%">
                     </div>
                 </div>
@@ -249,14 +252,9 @@
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/aos.js"></script>
     <script>
-         window.addEventListener('load', () => {
-            AOS.init({
-            duration: 1000,
-            easing: 'ease-in-out',
-            once: true,
-            mirror: false
-            })
-        });
+        AOS.init({
+            duration: 1200,
+        })
     </script>
 </body>
 
