--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="col-md-6" data-aos="fade-up">
                     <div class="privacyImg text-end position-relative">
                         <img class="startImg" src="assets/image/start.png" alt="start-img">
-                        <img class="lockMainImg" src="assets/image/lock1.png" alt="lock-img">
+                        <img class="lockMainImg" src="assets/image/lock01.png" alt="lock-img">
                     </div>
                 </div>
                 <div class="col-md-6" data-aos="fade-up">
@@ -183,7 +183,7 @@
                 <div class="col-md-6" data-aos="fade-up">
                     <div class="position-relative">
                         <img class="icon03" src="assets/image/icon03.svg" alt="icon">
-                        <img class="position-relative" src="assets/image/Midnight.png" lang="img" width="100%">
+                        <img class="position-relative index2" src="assets/image/Midnight.png" lang="img" width="100%">
                         <img class="icon04" src="assets/image/icon03.svg" width="216" alt="icon">
                     </div>
                 </div>
