--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             </div>
             <div class="row">
                 <div class="col-md-6 position-relative text-center text-md-start" data-aos="fade-up">
-                    <h1 class="primaryTitle mt-0 mt-md-5">Find Events Fast & Easy</h1>
+                    <h1 class="primaryTitle mt-0 mt-md-5 pt-md-5 pt-0">Find Events Fast & Easy</h1>
                     <p class="bannerDes">Discover the endless variety of events on our app</p>
                     <img class="bannerIcon" src="assets/image/bannerIcon.svg" alt="banner-icon">
                 </div>
                 <div class="col-md-6" data-aos="fade-up">
                     <div class="bannerImg position-relative text-end">
-                        <div class="scannerImg">
+                        <div class="scannerImg" data-aos="zoom-in" data-aos-delay="800">
                             <span class="d-block">Scan QR Code</span>
                             <img src="assets/image/scaner_img.png" alt="scaner-img" width="100%">
                         </div>
@@ -80,9 +80,9 @@
                         <img src="assets/image/eventImg.png" alt="event-img">
                     </div>
                 </div>
-                <div class="col-lg-6 position-relative">
+                <div class="col-lg-6 position-relative eventText">
                     <div class="musicIcon">
-                        <img src="assets/image/musicIcon.svg" alt="music-icon" width="100%" data-aos="fade-up">
+                        <img src="assets/image/musicIcon.svg" alt="music-icon" width="100%" data-aos="zoom-in" data-aos-delay="800">
                     </div>
                     <div class="row align-items-end">
                         <div class="col-sm-6" data-aos="fade-up">
@@ -97,7 +97,7 @@
                                     <li>- K-Pop</li>
                                     <li>- and many more</li>
                                 </ul>
-                                <img src="assets/image/eventIcon.png" alt="icon">
+                                <img class="arrowImg" src="assets/image/eventIcon.png" alt="icon">
                             </div>
                         </div>
                         <div class="col-sm-6" data-aos="fade-up">
@@ -119,8 +119,8 @@
     </div>
 
     <section class="textSliderSection py-3 position-relative" style="background-color: #2EA1A8;">
-        <div data-aos="fade-up" class="img01 position-absolute"><img src="assets/image/icon03.png" alt="icon03"></div>
-        <div data-aos="fade-up" class="img02 position-absolute bottom-0 end-0"><img src="assets/image/icon04.png" alt="icon03"></div>
+        <div data-aos="zoom-in" data-aos-delay="800" class="img01 position-absolute"><img src="assets/image/icon03.png" alt="icon03"></div>
+        <div data-aos="zoom-in" data-aos-delay="800" class="img02 position-absolute bottom-0 end-0"><img src="assets/image/icon04.png" alt="icon03"></div>
         <div class="sliderOuter" data-aos="fade-up">
             <div class="textSlider1">
                 <h4>Today</h4>
@@ -138,13 +138,13 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-7" data-aos="fade-up" data-aos-delay="1000">
-                    <h1 class="primaryTitle titleMD text-center text-md-start mt-5 mt-md-0 mb-5 mb-md-0">MANY WAYS TO EARN <br> COINS & RECEIVE PERSONALIZED <br>
+                    <h1 class="primaryTitle titleMD text-center text-md-start mt-5 mt-md-0 mb-4 mb-md-0">MANY WAYS TO EARN <br> COINS & RECEIVE PERSONALIZED <br>
                         EVENT SUGGESTIONS</h1>
                 </div>
                 <div class="col-md-5" data-aos="fade-up">
                     <div class="referImg position-relative">
                         <p data-aos="zoom-in" data-aos-delay="800"><span class="d-block">Invite Friends</span> (You and your Friends will receive coins)</p>
-                        <span class="imgLabel" data-aos="zoom-in" data-aos-delay="1000">Swipe Question</span>
+                        <span class="imgLabel imgLabel01" data-aos="zoom-in" data-aos-delay="1000">Swipe Question</span>
                         <span class="imgLabel imgLabel02" data-aos="zoom-in" data-aos-delay="1200">Suggest or Report Venues</span>
                         <span class="imgLabel imgLabel03" data-aos="zoom-in" data-aos-delay="1000">Play Trivia Etc.</span>
                         <img src="assets/image/referImg.png" alt="refer-img" width="100%">
@@ -160,11 +160,11 @@
                 <div class="col-md-6" data-aos="fade-up">
                     <div class="privacyImg text-end position-relative">
                         <img class="startImg" src="assets/image/start.png" alt="start-img">
-                        <img class="lockMainImg" src="assets/image/lock01.png" alt="lock-img">
+                        <img class="lockMainImg" src="assets/image/lock01.png" alt="lock-img" width="100%">
                     </div>
                 </div>
                 <div class="col-md-6" data-aos="fade-up">
-                    <h1 class="primaryTitle text-center mt-5 mt-md-0 text-md-end titleMD">PROTECTING <br> YOUR PRIVACY - WE NEVER
+                    <h1 class="primaryTitle text-center mt-5 mt-md-0 text-md-end titleMD">PROTECTING <br> YOUR PRIVACY - <br> WE NEVER
                         SHARE YOUR DATA</h1>
                 </div>
             </div>
@@ -182,9 +182,9 @@
                 </div>
                 <div class="col-md-6" data-aos="fade-up">
                     <div class="position-relative">
-                        <img class="icon03" src="assets/image/icon03.svg" alt="icon">
+                        <img class="icon03" src="assets/image/icon03.svg" alt="icon" data-aos="zoom-in" data-aos-delay="800">
                         <img class="position-relative index2" src="assets/image/Midnight.png" lang="img" width="100%">
-                        <img class="icon04" src="assets/image/icon03.svg" width="216" alt="icon">
+                        <img class="icon04" src="assets/image/icon03.svg" width="216" alt="icon" data-aos="zoom-in" data-aos-delay="800">
                     </div>
                 </div>
             </div>
@@ -194,12 +194,12 @@
     <section class="sectionPadding downloadSection">
         <div class="container" data-aos="fade-up">
             <h2>DOWNLOAD The BUUZ app to explore events near you</h2>
-            <div class="downloadIcon d-flex justify-content-center gap-3 mt-3 position-relative flex-wrap">
+            <div class="downloadIcon d-flex justify-content-center gap-3 mt-3 position-relative flex-wrap" data-aos="zoom-in" data-aos-delay="800">
                 <div class="icon02">
                     <img src="assets/image/icon02.svg" alt="icon02">
                 </div>
                 <a href="#"><img src="assets/image/appleLink.svg" alt="app-store" width="340"></a>
-                <a href="#"><img src="assets/image/playLink.svg" alt="app-store" width="340"></a>
+                <a href="#" class="comingSoon" title="Coming Soon"><img src="assets/image/playLink.svg" alt="app-store" width="340"></a>
             </div>
         </div>
     </section>
