--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <li><a target="_blank" href="http://www.buuzevents.com">Theaters & Performing Art Centers</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Festivals and Beach Events</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Cities, Municipalities, Parks</a></li>
-                        <li><a target="_blank" href="buuzMedia.html">BUUZ In The Media</a></li>
+                        <li><a target="_blank" href="buuz-media.html">BUUZ In The Media</a></li>
                         <li><a target="_blank" href="job-opportunities.html">Job Opportunities</a></li>
                     </ul>
                 </div>
